fix for z-index problem

--- a/css/booklet.css
+++ b/css/booklet.css
@@ -53,7 +53,7 @@ a:visited {
 }
 
 #books li:hover {
-	z-index: 999999;
+	z-index: 10000;
 	cursor: pointer;
 }
 
@@ -229,11 +229,11 @@ textarea:focus, input:focus{
 	left: 50%;
 	margin: 0 0 0 -400px;
 	width: 800px;
-	-webkit-box-shadow: 0 8px 65px rgba(0, 0, 0, 0.5);
-	box-shadow: 0 8px 65px rgba(0, 0, 0, 0.5);
-	z-index: 9999999;
+	-webkit-box-shadow: 0 3px 25px rgba(0, 0, 0, 0.4);
+	box-shadow: 0 3px 25px rgba(0, 0, 0, 0.4);
+	z-index: 999999;
 	background-color: #fff;
-	border: 1px solid #999;
+	border: 1px solid #666;
 	padding: 50px;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
@@ -247,6 +247,11 @@ textarea:focus, input:focus{
 	opacity: 1;
 }
 
+#detail-view-template.fade.up {
+	top: -900px;
+	opacity: 0;
+}
+
 #overlay {
 	width: 100%;
 	height: 100%;
@@ -254,14 +259,20 @@ textarea:focus, input:focus{
 	background-color: rgba(0, 0, 0, 1);
 	top: 0;
 	left: 0;
-	z-index: 999999;
-	opacity: 0.35;
+	z-index: 999990;
+	opacity: 0.4;
 }
 
 .fade.down {
 	-webkit-transition: opacity 0.5s linear,top 0.3s ease-out;
 	-moz-transition: opacity 0.5s linear,top 0.3s ease-out;
 	transition: opacity 0.5s linear,top 0.3s ease-out;
+}
+
+.fade.up {
+	-webkit-transition: opacity 0.5s linear,top 0.5s ease-out;
+	-moz-transition: opacity 0.5s linear,top 0.5s ease-out;
+	transition: opacity 0.5s linear,top 0.5s ease-out;
 }
 
 .fade-in {
@@ -271,15 +282,15 @@ textarea:focus, input:focus{
 }
 
 #detail-view-template .book {
-	float:left;
 	margin: 20px 30px 20px 0;
 }
 
 #detail-view-template .wrap-book {
-    margin: 10px 50px 20px 0;
+    margin: 10px 50px 30px 0;
     float: left;
     position: relative;
     z-index: 10;
+    text-align: center;
 }
 
 a.close-detail {
@@ -298,7 +309,6 @@ a.close-detail {
 }
 
 #wrap-info {
-	margin-left: 380px;
 	margin-bottom: 50px;
 }
 
@@ -319,10 +329,6 @@ a.close-detail {
   -webkit-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
   -ms-perspective: 100px;
-}
-
-.csstransforms3d  #books ul li:hover {
-	z-index: 999999999;
 }
 
 .csstransforms3d  .book {
